fix Specialties section layout on mobile

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -21,7 +21,7 @@
   gap: 3.2rem;
 
   @include respond(small) { 
-    gap: 1.6rem;
+    gap: 2.4rem;
   }
 
   &__link:link, 
