--- a/src/sass/layout/_intro.scss
+++ b/src/sass/layout/_intro.scss
@@ -13,17 +13,15 @@
     gap: 4.8rem;
   }
 
-  &__about {
-
-  }
-
-  &__specialties {
-
-  }
-
   &__links {
     display: flex;
     gap: 2rem;
     flex-wrap: wrap;
+
+    @include respond(x-small) { 
+      flex-direction: column;
+      align-items: start;
+      gap: 1.4rem;
+    }
   }
 }
